# idris-llvm

./: .gitignore  .travis.yml  LICENSE  Main.hs  Makefile  README.md  Setup.hs  idris-llvm.cabal
src/: CodeGen.hs  Common.hs  Constants.hs  Main.hs  MonadCodeGen.hs  Operators.hs  Util.hs
src/IRTS/: CodegenLLVM.hs
src/Util/: System.hs
src/rts/: Makefile  defs.c  getline.c  idris_buffer.c  rts.h
test/: runtest.hs
test/idris001/: run
