Name:           idris-llvm
Version:        0.0.0.1
License:        BSD3
License-file:   LICENSE
Author:         Benjamin Saunders
Maintainer:	Markus Pfeiffer <mp397@st-andrews.ac.uk>
Build-Type:	Simple
Cabal-Version:  >= 1.8
Extra-source-files:
		llvm/Makefile
		llvm/*.c

Executable idris-llvm
  Main-is:        Main.hs
  hs-source-dirs: src

  Build-depends:  idris
                , base
                , containers
                , directory
                , filepath
                , haskeline >= 0.7
                , mtl
                , process
                , transformers
                , vector
                , llvm-general == 3.3.8.*
                , llvm-general-pure == 3.3.8.*

  other-modules: IRTS.CodegenLLVM
  cpp-options:   -DIDRIS_LLVM

  ghc-prof-options: -auto-all -caf-all
  ghc-options:      -threaded -rtsopts -funbox-strict-fields

