Name:           idris-llvm
Version:        0.0.0.2
License:        BSD3
License-file:   LICENSE
Author:         Benjamin Saunders
Maintainer:	Niklas Larsson <niklas@mm.st>
Build-Type:	Custom
Cabal-Version:  >= 1.8
Extra-source-files:
		llvm/Makefile
		llvm/*.c

Executable idris-codegen-llvm
  Main-is:        Main.hs
  hs-source-dirs: src

  Build-depends:  idris
                , base
                , bytestring
                , containers
                , directory
                , filepath
                , haskeline >= 0.7
                , mtl
                , process
                , text
                , transformers
                , vector
                , llvm-hs
                , llvm-hs-pure

  other-modules: IRTS.CodegenLLVM
  cpp-options:   -DIDRIS_LLVM

  if os(linux)
     cpp-options:   -DLINUX
     build-depends: unix < 2.8
  if os(freebsd)
     cpp-options:   -DFREEBSD
     build-depends: unix < 2.8
  if os(dragonfly)
     cpp-options:   -DDRAGONFLY
     build-depends: unix < 2.8
  if os(darwin)
     cpp-options:   -DMACOSX
     build-depends: unix < 2.8
  if os(windows)
     cpp-options:   -DWINDOWS
     build-depends: Win32 < 2.4

  ghc-prof-options: -auto-all -caf-all
  ghc-options:      -threaded -rtsopts -funbox-strict-fields

